# linux-rga

./: CMakeLists.txt  README.md  RockchipRga.cpp  rga.pc.cmake
demo/: CMakeLists.txt
demo/rgaBlit/: CMakeLists.txt  rgaBlit.cpp
demo/rgaSlt/: CMakeLists.txt
pkgconfig/: librga.pc.cmake  rga.pc.cmake
src/: RockchipRga.cpp
